// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSlottedCss() should return correct css for p-button-tile 1`] = `
"p-button-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;

exports[`getSlottedCss() should return correct css for p-link-tile 1`] = `
"p-link-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix for p-button-tile 1`] = `
"prefixed-p-button-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix for p-link-tile 1`] = `
"prefixed-p-link-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;
